--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.0.8"
+    "@astrojs/tailwind": "^5.0.2",
+    "@fontsource-variable/montserrat": "^5.0.16",
+    "@fontsource/nixie-one": "^5.0.8",
+    "astro": "^3.4.3",
+    "tailwindcss": "^3.3.5"
   },
   "description": "The official Astro Cloud Sandbox Template by the CodeSandbox team"
 }
