--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.0.2",
+    "@astro-community/astro-embed-youtube": "^0.4.3",
+    "@astrojs/tailwind": "^5.0.3",
     "@fontsource-variable/montserrat": "^5.0.16",
     "@fontsource/nixie-one": "^5.0.8",
-    "astro": "^3.4.3",
+    "astro": "^4.0.3",
+    "astro-icon": "^0.8.2",
     "tailwindcss": "^3.3.5"
   },
   "description": "The official Astro Cloud Sandbox Template by the CodeSandbox team"
