--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro",
+  "name": "stefan_kineto-sport",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,5 +18,5 @@
     "astro-icon": "^0.8.2",
     "tailwindcss": "^3.3.5"
   },
-  "description": "The official Astro Cloud Sandbox Template by the CodeSandbox team"
+  "description": "Presentational website for Stefan Kineto Sport"
 }
