--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.0.3",
     "@fontsource-variable/montserrat": "^5.0.16",
     "@fontsource/nixie-one": "^5.0.8",
+    "@vercel/analytics": "^1.1.1",
     "astro": "^4.0.3",
     "astro-icon": "^0.8.2",
     "tailwindcss": "^3.3.5"
