--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.4.3",
     "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vercel": "^6.1.4",
     "@fontsource-variable/montserrat": "^5.0.16",
     "@fontsource/nixie-one": "^5.0.8",
     "@vercel/analytics": "^1.1.1",
