--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.4.3",
+    "@astrojs/partytown": "^2.0.4",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vercel": "^6.1.4",
