--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@astro-community/astro-embed-youtube": "^0.4.3",
-    "@astrojs/partytown": "^2.0.4",
-    "@astrojs/sitemap": "^3.0.4",
-    "@astrojs/tailwind": "^5.0.3",
-    "@astrojs/vercel": "^6.1.4",
+    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/partytown": "^2.1.1",
+    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "@fontsource-variable/montserrat": "^5.0.16",
     "@fontsource/nixie-one": "^5.0.8",
     "@vercel/analytics": "^1.1.1",
-    "astro": "^4.0.3",
+    "astro": "^4.13.1",
     "astro-icon": "^0.8.2",
     "tailwindcss": "^3.3.5"
   },
